# SocketServer

./: .gitignore  CMakeLists.txt  README.md
src/: AppConfig.cpp  AppConfig.h  ChatApplication.cpp  ChatApplication.h  Globals.cpp  Globals.h  main.cpp  test.bat
src/socket/: ClientSocket.cpp  ClientSocket.h  MessageQueue.cpp  MessageQueue.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h
src/socket/interface/: ErrorDetectionSocket.cpp  ErrorDetectionSocket.h  LinuxSocket.cpp  LinuxSocket.h  SocketInterface.h  WindowsSocket.cpp  WindowsSocket.h
src/tui/: Box.cpp  Box.h  Buffer.cpp  Buffer.h  Drawable.h  Movable.cpp  Movable.h  Spinners.cpp  Spinners.h  TUI.cpp  TUI.h  TUIItem.h  Terminfo.h  TextBox.cpp  TextBox.h
src/util/: ConsoleOutput.cpp  ConsoleOutput.h  Errors.h  Logger.cpp  Logger.h  StringMod.cpp  StringMod.h  ThreadSafeVector.cpp  ThreadSafeVector.h  UserInput.cpp  UserInput.h
